tests/codegen/errors/env/env/call.fixed.list.element-type/atom.menu.error.env.call.fixed.list.element-type.004/menu-env-call.fixed.list.element-type-004.mon
;; TEST-ID: tests.codegen.menu.errors.env.call.fixed.list.element.type.004
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: errors
;; TEST-SUBSET: env/call.fixed.list.element-type
;; TEST-MENU: errors/env/call.fixed.list.element-type/atom.menu.error.env.call.fixed.list.element-type.004
;; TEST-MENU-PATH: codegen/errors/env/call.fixed.list.element-type/atom.menu.error.env.call.fixed.list.element-type.004
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.error-menu
;; TEST-PURPOSE: Pin env.c diagnostic: Couldn't match expected type
;; TEST-ATOM: atom.menu.error.env.call.fixed.list.element-type.004
;; TEST-CODEGEN-ATOM: atom.menu.error.env.call.fixed.list.element-type.004
;; TEST-ATOM-LEAF: atom.menu.error.env.call.fixed.list.element-type.004
;; TEST-QUALITY: menu-error-diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-ERROR-STAGE: env
;; TEST-ERROR-FAMILY: call.fixed.list.element-type
;; TEST-ERROR-MESSAGE: Couldn't match expected type
;; TEST-ERROR-SOURCE: env.c
;; TEST-ERROR-PATH: env.c:857
;; TEST-CODEGEN-PATH: diagnostic.env.call.fixed.list.element-type
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: env
;; TEST-TAG: menu
;; TEST-COVERAGE: env.c:857 Couldn't match expected type
;; TEST-USES-ATOM: atom.menu.error.env.call.fixed.list.element-type.004
;; TEST-USES-ATOM: atom.error.env
;; TEST-USES-ATOM: atom.error.env.call.fixed.list.element-type
;; TEST-USES-ATOM: atom.env.error
;; TEST-DEPENDS-ON: atom.env.hm.check.call
;; TEST-DEPENDS-ON: atom.env.hm.infer.define
;; TEST-REFINES: atom.error.env
;; TEST-REFINES: atom.error.env.call.fixed.list.element-type
;; TEST-REFINES: atom.env.error
;; TEST-RELATED: atom.codegen.error.menu
;; TEST-CLI-TARGET: codegen errors env env

(module Main)
(define (env_menu_pair_type_5_4 [xs : [Int String]] -> Int) 0)
(show (env_menu_pair_type_5_4 [1 2]))
